# bud-get

./: .gitignore  README.md  main.py  pyproject.toml  settings.py  settings.yaml
adapters/inputs/: csv_input.py
inputs/: Download your bank CSV files here.txt
tests/: test_adapter_csv_input.py
tests/samples/: park_bank.csv
