[tool.poetry]
name = "bud-get"
version = "0.1.0"
package-mode = false
description = "An automated budget the way I like it."
authors = ["gschlabitz <guido.schlabitz@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
pytest = "^8.3.3"
pyyaml = "^6.0.2"
pytest-mock = "^3.14.0"
numbers-parser = "^4.14.4"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
